--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1,9 +1,60 @@
-@import 'vars';
-@import 'fonts';
-@import 'reset';
-@import "global";
+@import "vars";
+@import "_fonts";
+@import "_reset";
+@import "_global";
 
+.header {
+  padding: 40px 0;
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+.menu {
+  &__list {
+    display: flex;
+    align-items: center;
+  }
+  &__list-item + .menu__list-item {
+    padding-left: 35px;
+  }
+  &__list-link {
+    color: $title;
+    transition: all 0.3s;
+    @extend %quicksand-400;
+    padding-bottom: 1px;
+    &:hover {
+      color: $accent;
+      border-bottom: 1px solid $accent;
+       @extend %quicksand-500;
+    }
+  }
+  &__list-link--active {
+    color: $accent;
+     @extend %quicksand-500;
+  }
+}
+.user-nav {
+  display: flex;
+  &__link {
+    position: relative;
+  }
+  &__num {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: $accent;
+    top: -9px;
+    right: -14px;
+    font-size: 12px;
+    text-align: center;
+    line-height: 20px;
+    color: #ffffff;
+  }
+  &__link + .user-nav__link {
+    padding-left: 25px;
+  }
+}
 
-
-
-@import 'media';
+@import "_media";
