--- a/project-start/css/style.css
+++ b/project-start/css/style.css
@@ -99,8 +99,8 @@ a[class] {
 body {
   color: #8d8d8d;
   font-size: 16px;
-  font-size: 26px;
   color: #8d8d8d;
+  line-height: 26px;
 }
 
 .container {
