--- a/#src/scss/_fonts.scss
+++ b/#src/scss/_fonts.scss
@@ -1,1 +1,55 @@
+// @font-face {
+//   font-family: 'Roboto-Regular';
+//   font-weight: 400;
+//   font-style: normal;
+//   font-display: swap;
+//   src: local('Roboto-Regular'),
+//   url('../fonts/Roboto-Regular.woff2') format ('woff2'),
+//   url('../fonts/Roboto-Regular.woff') format ('woff');
+// }
 
+@font-face {
+  font-family: 'BebasNeue-Regular';
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src: local('BebasNeue-Regular'),
+  url('../fonts/BebasNeue-Regular.woff2') format ('woff2'),
+  url('../fonts/BebasNeue-Regular.woff') format ('woff');
+}
+@font-face {
+  font-family: 'OpenSans-Bold';
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+  src: local('OpenSans-Bold'),
+  url('../fonts/OpenSans-Bold.woff2') format ('woff2'),
+  url('../fonts/OpenSans-Bold.woff.woff') format ('woff');
+}
+@font-face {
+  font-family: 'OpenSans-Regular';
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src: local('OpenSans-Regular'),
+  url('../fonts/OpenSans-Regular.woff2') format ('woff2'),
+  url('../fonts/OpenSans-Regular.woff.woff') format ('woff');
+}
+@font-face {
+  font-family: 'OpenSans-ExtraBold';
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+  src: local('OpenSans-ExtraBold'),
+  url('../fonts/OpenSans-ExtraBold.woff2') format ('woff2'),
+  url('../fonts/OpenSans-ExtraBold.woff.woff') format ('woff');
+}
+@font-face {
+  font-family: 'OpenSans-SemiBold';
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+  src: local('OpenSans-SemiBold'),
+  url('../fonts/OpenSans-SemiBold.woff2') format ('woff2'),
+  url('../fonts/OpenSans-SemiBold.woff.woff') format ('woff');
+}
