--- a/#src/scss/_global.scss
+++ b/#src/scss/_global.scss
@@ -1,1 +1,54 @@
+html,
+body {
+  height: 100%;
+ 
+}
+.container {
+  max-width: 940px;
+  margin: 0 auto;
+}
 
+
+// body {
+//   color: $default;
+//   font-size: 16px;
+//   color: $default;
+//   @extend %quicksand-500;
+//   line-height: 26px;
+//   display: flex;
+//   flex-direction: column;
+// }
+
+// main {
+//   flex-grow: 1;
+// }
+
+// .container {
+//   max-width: 1200px;
+//   margin: 0 auto;
+//   padding: 0 15px;
+// }
+
+// a {
+//   color: $default;
+//   font-size: 16px;
+//   color: $default;
+//   @extend %quicksand-500;
+//   line-height: 26px;
+// }
+
+// .title {
+//   text-align: center;
+//   @extend %roboto-700;
+//   font-size: 48px;
+//   line-height: 65px;
+//   color: $title;
+//   margin-bottom: 10px;
+//   text-transform: uppercase;
+// }
+
+// .text {
+//   text-align: center;
+//   max-width: 570px;
+//   margin: 0 auto 55px;
+// }
