--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1,6 +1,11 @@
-@import ("_reset.scss");
-@import ("_vars.scss");
-@import ("_global.scss");
-@import ("_fonts.scss");
-@import ("_libs.scss);
-@import ("_adaptive.scss);
+@import "_reset.scss";
+@import "_vars.scss";
+@import "_global.scss";
+@import "_fonts.scss";
+@import "_libs.scss";
+@import "_media";
+@import "_header.scss";
+@import "_story.scss";
+@import "_service.scss";
+@import "_connection.scss";
+@import "_footer.scss";
